Fixed footer overlap issue

--- a/packages/nulp_elite/src/styles/style.css
+++ b/packages/nulp_elite/src/styles/style.css
@@ -13,6 +13,7 @@ body {
   font-weight: 500;
   font-style: normal;
   background: #ffbc0154;
+  min-height: 100vh;
 }
 
 body,
@@ -1602,6 +1603,7 @@ button {
     padding-right: 45px;
     padding-left: 45px;
   } */
+
   .lg-w-140 {
     width: 140px;
   }
@@ -3464,4 +3466,13 @@ thead th {
 }
 .MuiDialog-paper .MuiListItemText-root {
   display: inline-block !important;
+}
+
+#root{
+  min-height: 100vh;
+}
+
+#root > div:first-child {
+  min-height: 100vh;
+  padding-bottom: 130px;
 }
